--- a/oauth-FENIX/templates/appPage.html
+++ b/oauth-FENIX/templates/appPage.html
@@ -32,14 +32,14 @@
   #button {
   display: inline-block;
   background-color: rgb(150, 52, 48);
-  width: 160px;
-  height: 80px;
+  width: 10vw;
+  height: 10vh;
   text-align: center;
   border-radius: 4px;
   margin: 30px;
   position: fixed;
-  bottom: 800px;
-  right: 30px;
+  bottom: 80%;
+  right: 0%;
   transition: background-color .3s;
   z-index: 1000;
   font-size: 40px;
@@ -51,15 +51,14 @@
 <title>{% block title %}{% endblock %} - Flask</title>
 
 {% if loggedIn %}
-User logged in
-<br>
+username - {{ username }} {{name}}
+<!-- <br>
 <a href="{{ url_for("private_page") }}"> Private part of the site (needs auth)</a>
-<br>
+<br> -->
 <button id="button" onclick="window.location='{{ url_for("logout") }}'" >
   Logout
 </button>
 <!-- <a href="{{ url_for("logout") }}"> Logout</a> -->
-
 
 {% else %}
 
