--- a/proxy/templates/videoListing.html
+++ b/proxy/templates/videoListing.html
@@ -15,9 +15,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-youtube/2.6.1/Youtube.min.js"></script>
 
     <script>
-        name = decodeURIComponent(window.location.search);
-        name = name.substring(1);
-        console.log(name);
 
         function getVideoViews(videoID) {
             $.ajax({
@@ -73,7 +70,7 @@
             });
         }
         $(document).ready(function() {
-            $("#hello").html("Welcome, " + name);
+
             updateVideostable()
             $("#buttonUpdateVideotable").click(
                     //TODO 1 - configure the $("#buttonUpdateVideotable")
@@ -101,7 +98,7 @@
 
 <body>
     </br>
-    <h2 id="hello"></h2>
+    <h2 >Welcome {{name}}</h2>
     </br>
     <h3>List of videos</h3>
     <table class="ui celled table selectable" id="videosTable">
@@ -133,7 +130,7 @@
     <button class="ui button" id="buttonPlayVideo">Play</button>
 
     <br>
-    <button class="ui button" onclick="window.location='{{ url_for(" logout ") }}'">Logout</button>
+    <button class="ui button" onclick="window.location='{{ url_for("logout") }}'">Logout</button>
 </body>
 
 </html>
