--- a/proxy/templates/videoPage.html
+++ b/proxy/templates/videoPage.html
@@ -114,12 +114,19 @@
         $(document).ready(function() {
             var vPlayer = videojs('videoPlayer');
             updateQuestiontable()
+            $.ajax({
+                //TODO 9 - increase the number of views
+                url: '/QA/' + id,
+                type: "PUT",
+                dataType: "json",
+                success: function(data) {
+                    console.log(data)
+                }
+            })
             $("#buttonVideoPause").click(function() {
                 vPlayer.pause()
                 var pauseTime = vPlayer.currentTime()
-                console.log(pauseTime)
                 $("#resumetime").val(pauseTime)
-                document.getElementById("newTime").value = pauseTime;
 
             })
             $("#buttonVideoResume").click(function() {
@@ -144,16 +151,6 @@
                         "src": url
                     });
                     vPlayer.play()
-
-                    $.ajax({
-                        //TODO 9 - increase the number of views
-                        url: '/videos/' + id + '/views',
-                        type: "PUT",
-                        dataType: "json",
-                        success: function(data) {
-                            console.log(data)
-                        }
-                    })
                 }
             });
 
@@ -166,6 +163,17 @@
                         // and pass those values to the addNewVideo function
                     vPlayer.currentTime(parseFloat($("#resumetime").val()))
                     vPlayer.play()
+                    document.getElementById("newQ").style.display = "none";
+
+                    $.ajax({
+                        //TODO 9 - increase the number of views
+                        url: '/QA/' + id,
+                        type: "PUT",
+                        dataType: "json",
+                        success: function(data) {
+                            console.log(data)
+                        }
+                    })
                 })
                 // TODO 11 - update the table
             $("#buttonAddAnswer").click(function() {
@@ -175,9 +183,9 @@
                 console.log(name)
                 console.log(newAnswer)
                 console.log(question)
-                if (question > 0)
+                if (question > 0) {
                     addNewAnswer(user, name, newAnswer, question)
-                else
+                } else
                     alert("Please choose answer")
                     //TODO 3 - get the values of #newVideoURL and newVideoDescription
                     // and pass those values to the addNewVideo function
@@ -186,6 +194,15 @@
                 question_id = $('input[name=radioQ]:checked').val()
                 console.log(question_id)
                 updateAnswerstable(question_id)
+            })
+            $("#buttonNewQuestion").click(function() {
+                document.getElementById("newQ").style.display = "block";
+                vPlayer.pause()
+                var pauseTime = vPlayer.currentTime()
+                console.log(pauseTime)
+                $("#resumetime").val(pauseTime)
+                document.getElementById("newTime").value = pauseTime;
+
             })
         });
     </script>
@@ -226,15 +243,18 @@
         <input type="text" id="resumetime">
     </div>
     <button class="ui button" id="buttonVideoResume">RESUME Video</button>
-    <h3>Add a new Question</h3>
-    <div class="ui input">
-        <input type="text" placeholder="Time" id="newTime">
+    </br>
+    <button class="ui button" id="buttonNewQuestion">New Question</button>
+    <div id="newQ" style="display:none">
+        <h3>Add a new Question</h3>
+        <div class="ui input">
+            <input type="text" placeholder="Time" id="newTime" disabled="disabled">
+        </div>
+        <div class="ui input">
+            <input type="text" placeholder="Question" id="newQuestion">
+        </div>
+        <button class="ui button" style="margin-left:5px" id="buttonAddQuestion">Add new Question</button>
     </div>
-    <div class="ui input">
-        <input type="text" placeholder="Question" id="newQuestion">
-    </div>
-    <button class="ui button" id="buttonAddQuestion">Add new Question</button>
-
     <h3>List of Answers</h3>
     <table class="ui celled table selectable" id="ansTable">
         <thead>
