--- a/proxy/templates/videoListing.html
+++ b/proxy/templates/videoListing.html
@@ -17,7 +17,7 @@
     <script>
         var n = '{{name}}'
 
-        function getVideoViews(videoID) {
+        function getVideoInfo(videoID) {
             $.ajax({
                 url: '/videos/' + videoID + '/',
                 type: "GET",
@@ -25,20 +25,8 @@
                 success: function(data) {
                     console.log(data)
                     $("#nviews" + videoID).html(data["views"])
-                    console.log("update the number of views on the table for" + videoID)
-                },
-            })
-        }
-
-        function getNumQuestions(videoID) {
-            $.ajax({
-                url: '/QA/' + videoID + '/',
-                type: "GET",
-                dataType: "json",
-                success: function(data) {
-                    console.log(data)
                     $("#nquestions" + videoID).html(data["num_questions"])
-                    console.log("update the number of questions on the table for" + videoID)
+                    console.log("update the number of views on the table for" + videoID)
                 },
             })
         }
@@ -54,10 +42,10 @@
                     data["videos"].forEach(v => {
                         console.log(v["video_id"] + " " + v["description"])
                         $('#videosTable > tbody:last-child').
-                        append('<tr> <td>' + v["video_id"] + '</td><td>' + v["description"] + '</td><td id="nviews' + v["video_id"] + '">xxx</td><td id="nquestions' + v["video_id"] + '">xxx</td></tr>');
-                        getVideoViews(v["video_id"])
-                        getNumQuestions(v["video_id"])
-                            // TODO  10 - Fill the column with the number of views of each video
+                        append('<tr> <td>' + v["video_id"] + '</td><td>' + v["description"] + '</td><td id="nviews' + v["video_id"] + '">xxx</td><td id="nquestions' + v["video_id"] + '">0</td></tr>');
+                        getVideoInfo(v["video_id"])
+
+                        // TODO  10 - Fill the column with the number of views of each video
                     });
                 }
             });
